--- a/013-string-template.html
+++ b/013-string-template.html
@@ -11,7 +11,7 @@
     <script>
         /*
         String Template
-        - Sering menggunakan operator +
+        - String menggunakan operator +
         - opertor + sangat menyulitkan bila dalam jumlah banyak
         - String template bisa mensubtitusi data dari luar String
           ke dalam string
