--- a/029-for-loop.html
+++ b/029-for-loop.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Looping</title>
+    <title>For Loop</title>
 </head>
 
 <body>
@@ -21,8 +21,11 @@
         - post statement akan dieksekusi setiap kali diakhir pengulangan
         - init statement, kondisi dan post statemen tidak wajib diisi, jika tidak diisi berarti konisi selalu bernilai true
         */
-        for (; ;) {
-            alert("for loop");
+        // for (; ;) {
+        //     alert("for loop");
+        // }
+        for (let counter = 1; counter <= 5; counter++) {
+            document.writeln(`<p>Perulangan ke : ${counter}</p>`);
         }
     </script>
 </body>
