--- a/042-rest-parameter.html
+++ b/042-rest-parameter.html
@@ -10,13 +10,13 @@
 <body>
     <script>
         /*
-        Rest Parameter
-        - rest parameter adalah fitur dimana kita bisa mengirim data sebanyak-banyak nya pada satu parameter, dan secara otomatis akan dikonversi menjadi array
-        - terdapat ketentuan
-        - hanya boleh ada satu function, tidak lebih dari satu
-        - haya boleh di posisi paling akhir, tidak didepan dan ditengah, kecuali memang 1 parameter
-        - disebut juga variabel argumen
-        */
+            Rest Parameter
+            - rest parameter adalah fitur dimana kita bisa mengirim data sebanyak-banyak nya pada satu parameter, dan secara otomatis akan dikonversi menjadi array
+            - terdapat ketentuan
+            - hanya boleh ada satu function, tidak lebih dari satu
+            - haya boleh di posisi paling akhir, tidak didepan dan ditengah, kecuali memang 1 parameter
+            - disebut juga variabel argumen
+            */
         function sum(name, ...data) {
             let total = 0;
             for (const item of data) {
@@ -42,10 +42,19 @@
         /*
         Argument Object
         - sebelum ada fitur rest parameter, di javascript sudah ada fitur yang bernama arguments object
-        -ini adalah fitur dimana kita bisa mengambil semua parameter dalam bentuk array degngan menggunakan object bernama arguments
+        -ini adalah fitur dimana kita bisa mengambil semua parameter dalam bentuk array dengan menggunakan object bernama arguments
         - arguments secara otomatis bisa digunakan dalan function
         - perlu diingat bahwa untuk javascript saat ini lebih baik disarankan menggunakan rest parameter dibanding argument object
         */
+        function oldSum() {
+            let total = 0;
+            for (const item of arguments) {
+                total += item;
+            }
+            console.info(`Total : ${total}`);
+        }
+
+        oldSum(1,2,3,4,5,6,7,8,9);
     </script>
 </body>
 
